--- a/Proyecto Integrador.vbproj
+++ b/Proyecto Integrador.vbproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="MySql.Data">
       <HintPath>C:\Program Files (x86)\MySQL\MySQL Connector Net 8.0.30\Assemblies\net5.0\MySql.Data.dll</HintPath>
     </Reference>
